# appletheia

./: .dockerignore  .gitattributes  .gitmessage  AGENTS.md  CONTRIBUTING.md  Cargo.toml  release-plz.toml
crates/appletheia/: CHANGELOG.md  Cargo.toml
crates/appletheia-application/: CHANGELOG.md  Cargo.toml
crates/appletheia-application/src/: aggregate_version_tag.rs  authentication.rs  authorization.rs  command.rs  consumer.rs  event.rs  idempotency.rs  lib.rs  massaging.rs  messaging.rs  object_storage.rs  outbox.rs  projection.rs  query.rs  repository.rs  request_context.rs  saga.rs  snapshot.rs  unit_of_work.rs
crates/appletheia-application/src/aggregate_version_tag/: aggregate_version_tag_id.rs  aggregate_version_tag_id_error.rs  aggregate_version_tag_name.rs  aggregate_version_tag_name_error.rs
crates/appletheia-application/src/authentication/: auth_token.rs  auth_token_audience.rs  auth_token_audience_error.rs  auth_token_audiences.rs  auth_token_audiences_error.rs  auth_token_claims.rs  auth_token_claims_error.rs  auth_token_exchange_code.rs  auth_token_exchange_code_consumed_at.rs  auth_token_exchange_code_created_at.rs  auth_token_exchange_code_error.rs  auth_token_exchange_code_expires_at.rs  auth_token_exchange_code_expires_in.rs  auth_token_exchange_code_expires_in_error.rs  auth_token_exchange_code_hash.rs  auth_token_exchange_code_hash_error.rs  auth_token_exchange_code_hasher.rs  auth_token_exchange_code_hasher_error.rs  auth_token_exchange_code_issue_request.rs  auth_token_exchange_code_issue_result.rs  auth_token_exchange_code_issuer.rs  auth_token_exchange_code_issuer_config.rs  auth_token_exchange_code_issuer_error.rs  auth_token_exchange_code_record.rs  auth_token_exchange_code_record_id.rs  auth_token_exchange_code_record_persisted.rs  auth_token_exchange_code_store.rs  auth_token_exchange_code_store_error.rs  auth_token_exchange_grant.rs  auth_token_exchange_grant_cipher.rs  auth_token_exchange_grant_cipher_error.rs  auth_token_exchange_request.rs  auth_token_exchange_result.rs  auth_token_exchanger.rs  auth_token_exchanger_error.rs  auth_token_expires_at.rs  auth_token_expires_at_error.rs  auth_token_expires_in.rs  auth_token_expires_in_error.rs  auth_token_id.rs  (+29 more)
crates/appletheia-application/src/authorization/: aggregate_ref.rs  aggregate_ref_error.rs  authorization_action.rs  authorization_model.rs  authorization_model_error.rs  authorization_plan.rs  authorization_policy.rs  authorization_relation.rs  authorization_relations.rs  authorization_request.rs  authorization_type_definition.rs  authorizer.rs  authorizer_error.rs  caveat.rs  caveat_evaluator.rs  caveat_name.rs  caveat_name_error.rs  default_authorizer.rs  default_relationship_resolver.rs  in_memory_authorization_model.rs  principal_requirement.rs  rebac_subject.rs  relation.rs  relation_name.rs  relation_name_error.rs  relation_name_owned.rs  relation_name_owned_error.rs  relation_ref.rs  relation_ref_owned.rs  relations.rs  relationship.rs  relationship_change.rs  relationship_edge.rs  relationship_eval_node_count.rs  relationship_eval_scanned_relationship_count.rs  relationship_eval_state.rs  relationship_expr_eval_context.rs  relationship_id.rs  relationship_id_error.rs  relationship_memo_key.rs  (+12 more)
crates/appletheia-application/src/command/: command_consistency.rs  command_dispatch_error.rs  command_dispatch_result.rs  command_dispatcher.rs  command_dispatcher_error.rs  command_failure_reaction.rs  command_failure_reaction_error.rs  command_failure_report.rs  command_handled.rs  command_handler.rs  command_hash.rs  command_hash_error.rs  command_hasher.rs  command_hasher_error.rs  command_id.rs  command_name.rs  command_name_owned.rs  command_name_owned_error.rs  command_options.rs  command_outbox.rs  command_owned.rs  command_owned_error.rs  command_request.rs  command_request_owned.rs  command_request_owned_error.rs  command_selector.rs  command_worker.rs  command_worker_error.rs  default_command_dispatcher.rs  default_command_hasher.rs  default_command_worker.rs  default_request_hasher.rs  field_patch.rs  follow_up_command.rs  follow_up_command_error.rs  follow_up_command_source.rs  idempotency_begin_result.rs  idempotency_error.rs  idempotency_id.rs  idempotency_id_error.rs  (+6 more)
crates/appletheia-application/src/consumer/: consumer_builder.rs  consumer_builder_error.rs  consumer_error.rs  consumer_factory.rs  consumer_factory_error.rs  consumer_group_error.rs  delivery.rs
crates/appletheia-application/src/event/: aggregate_id_owned.rs  aggregate_id_owned_error.rs  aggregate_id_value.rs  aggregate_id_value_error.rs  aggregate_type_owned.rs  aggregate_type_owned_error.rs  aggregate_version_range.rs  app_event.rs  causation_id.rs  event_envelope.rs  event_envelope_domain_event_error.rs  event_envelope_error.rs  event_feed_batch_size.rs  event_feed_reader.rs  event_feed_reader_error.rs  event_lookup.rs  event_lookup_error.rs  event_name_owned.rs  event_name_owned_error.rs  event_outbox.rs  event_payload_owned.rs  event_payload_owned_error.rs  event_reader.rs  event_reader_access.rs  event_reader_error.rs  event_reader_provider.rs  event_selector.rs  event_sequence.rs  event_sequence_error.rs  event_sequence_lookup.rs  event_sequence_lookup_error.rs  event_writer.rs  event_writer_access.rs  event_writer_error.rs  serialized_event_payload.rs  serialized_event_payload_error.rs  try_event_writer_provider.rs
crates/appletheia-application/src/massaging/: consumer.rs  (+5 more)
crates/appletheia-domain/: CHANGELOG.md  Cargo.toml  README.md
crates/appletheia-domain/src/: aggregate.rs  core.rs  event.rs  identifier.rs  lib.rs  repository.rs  snapshot.rs
crates/appletheia-infrastructure/: CHANGELOG.md  Cargo.toml
crates/appletheia-infrastructure/src/: aes_gcm.rs  core.rs  http.rs  jwt.rs  lib.rs  postgresql.rs  sha.rs
crates/appletheia-macros/: CHANGELOG.md  Cargo.toml
crates/appletheia-macros/src/: application.rs  lib.rs  utils.rs
crates/appletheia-macros/tests/: fixtures_compile.rs  trybuild.rs
crates/appletheia/src/: lib.rs
examples/banking/server/: Cargo.toml  docker-compose.yml
(+1635 files in other folders)
