[workspace]
resolver = "3"

members = [
    "crates/appletheia",
    "crates/appletheia-domain",
    "crates/appletheia-application",
    "crates/appletheia-infrastructure",
]

[workspace.package]
edition = "2024"
license = "MIT"
readme = "README.md"
authors = ["pbandj082 <pbandj082@gmail.com>"]
repository = "https://github.com/pbandj082/appletheia"
description = "The Application Interfaces for Event-Sourcing Architecture"
keywords = ["appletheia", "ddd", "event-sourcing", "cqrs"]

[patch.crates-io]
appletheia-domain = { path = "crates/appletheia-domain" }
appletheia-application = { path = "crates/appletheia-application" }
appletheia-infrastructure = { path = "crates/appletheia-infrastructure" }
