[workspace]
resolver = "3"

members = [
    "crates/appletheia",
    "crates/appletheia-domain",
    "crates/appletheia-application",
    "crates/appletheia-infrastructure",
    "crates/appletheia-macros",
]

[workspace.package]
edition = "2024"
license = "MIT"
readme = "README.md"
authors = ["pbandj082 <pbandj082@gmail.com>"]
repository = "https://github.com/pbandj082/appletheia"
description = "The Application Interfaces for Event-Sourcing Architecture"
keywords = ["appletheia", "ddd", "event-sourcing", "cqrs"]

[workspace.dependencies]
appletheia-domain = { version = "0.2.0", path = "crates/appletheia-domain" }
appletheia-application = { version = "0.5.0", path = "crates/appletheia-application" }
appletheia-infrastructure = { version = "0.5.0", path = "crates/appletheia-infrastructure" }
appletheia-macros = { version = "0.2.0", path = "crates/appletheia-macros" }
