[workspace]
resolver = "3"

members = [
    "crates/appletheia",
    "crates/appletheia-domain",
    "crates/appletheia-application",
    "crates/appletheia-infrastructure",
    "crates/appletheia-macros",
]

[workspace.package]
edition = "2024"
license = "MIT"
readme = "README.md"
authors = ["pbandj082 <pbandj082@gmail.com>"]
repository = "https://github.com/Lethephobia/appletheia"
description = "The Application Interfaces for Event-Sourcing Architecture"
keywords = ["appletheia", "ddd", "event-sourcing", "cqrs"]

[workspace.dependencies]
appletheia-domain = { version = "0.3.2", path = "crates/appletheia-domain" }
appletheia-application = { version = "0.19.0", path = "crates/appletheia-application" }
appletheia-infrastructure = { version = "0.10.1", path = "crates/appletheia-infrastructure" }
appletheia-macros = { version = "0.2.10", path = "crates/appletheia-macros" }
base64 = "0.22.1"
chrono = "0.4.42"
serde = "1.0.228"
serde_json = "1.0.145"
sha2 = "0.11.0"
thiserror = "2.0.17"
tokio = "1"
url = "2.5.7"
uuid = "1.18.1"
