[package]
name = "appletheia-application"
description = "The Application Layer for Event-Sourcing Architecture"
version = "0.1.2"
edition = "2024"
license = "MIT"
include = ["src/**", "Cargo.toml", "README.md", "LICENSE"]
authors = ["pbandj082 <pbandj082@gmail.com>"]
repository = "https://github.com/pbandj082/appletheia"
keywords = ["appletheia", "ddd", "event-sourcing", "cqrs"]

[dependencies]
appletheia-domain = { version = "0.1.1", optional = true }
