[package]
name = "appletheia-application"
description = "The Application Layer for Event-Sourcing Architecture"
version = "0.5.0"
edition = "2024"
license = "MIT"
include = ["src/**", "Cargo.toml", "README.md", "LICENSE"]
authors = ["pbandj082 <pbandj082@gmail.com>"]
repository = "https://github.com/pbandj082/appletheia"
keywords = ["appletheia", "ddd", "event-sourcing", "cqrs"]

[dependencies]
appletheia-domain = { version = "0.2.0" }
thiserror = "2.0.17"
uuid = { version = "1.18.1", features = ["serde", "v4", "v7"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
chrono = { version = "0.4.42", features = ["serde"] }
tokio = { version = "1", features = ["time", "rt", "macros"] }
sha2 = "0.10.9"
url = { version = "2.5.7", features = ["serde"] }
base64 = "0.22.1"
