[package]
name = "appletheia-application"
description = "The Application Layer for Event-Sourcing Architecture"
version = "0.10.1"
edition = "2024"
license = "MIT"
include = ["src/**", "Cargo.toml", "README.md", "LICENSE"]
authors = ["pbandj082 <pbandj082@gmail.com>"]
repository = "https://github.com/pbandj082/appletheia"
keywords = ["appletheia", "ddd", "event-sourcing", "cqrs"]

[dependencies]
appletheia-domain = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true, features = ["serde", "v4", "v7"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
chrono = { workspace = true, features = ["serde"] }
tokio = { workspace = true, features = ["time", "rt", "macros"] }
sha2 = { workspace = true }
url = { workspace = true, features = ["serde"] }
base64 = { workspace = true }
icu_locale = { version = "2.1.1", features = ["serde"] }
chrono-tz = { version = "0.10.4", features = ["serde"] }
