[package]
name = "appletheia-domain"
description = "The Domain Layer for Event-Sourcing Architecture"
version = "0.1.2"
license = "MIT"
edition = "2024"
include = ["src/**", "Cargo.toml", "README.md", "LICENSE"]
authors = ["pbandj082 <pbandj082@gmail.com>"]
repository = "https://github.com/pbandj082/appletheia"
keywords = ["appletheia", "ddd", "event-sourcing", "cqrs"]

[dependencies]
chrono = "0.4.42"
thiserror = "2.0.17"
uuid = { version = "1.18.1", features = ["v7"] }
