[package]
name = "appletheia-domain"
description = "The Domain Layer for Event-Sourcing Architecture"
version = "0.3.1"
license = "MIT"
edition = "2024"
include = ["src/**", "Cargo.toml", "README.md", "LICENSE"]
authors = ["pbandj082 <pbandj082@gmail.com>"]
repository = "https://github.com/pbandj082/appletheia"
keywords = ["appletheia", "ddd", "event-sourcing", "cqrs"]

[dependencies]
chrono = { workspace = true, features = ["serde"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true, features = ["serde", "v7"] }

[dev-dependencies]
appletheia-macros = { workspace = true }
