[package]
name = "appletheia-infrastructure"
description = "The Infrastructure Layer for Event-Sourcing Architecture"
version = "0.7.3"
edition = "2024"
license = "MIT"
include = ["src/**", "migrations/**", "Cargo.toml", "README.md", "LICENSE"]
authors = ["pbandj082 <pbandj082@gmail.com>"]
repository = "https://github.com/pbandj082/appletheia"
keywords = ["appletheia", "ddd", "event-sourcing", "cqrs"]

[dependencies]
appletheia-domain = { workspace = true }
appletheia-application = { workspace = true }
thiserror = "2.0.17"
sqlx = { version = "0.8.6", features = [
    "runtime-tokio",
    "postgres",
    "uuid",
    "chrono",
    "migrate",
] }
uuid = { version = "1.18.1", features = ["serde", "v7"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
chrono = "0.4.42"
google-cloud-pubsub = "0.33.0"
google-cloud-gax = "1.8.0"
futures-util = "0.3.31"
jsonwebtoken = { version = "10.3.0", features = ["rust_crypto"] }
reqwest = { version = "0.13.2", default-features = false, features = ["rustls", "gzip"] }
httpdate = "1.0.3"
url = "2.5.7"
base64 = "0.22.1"
sha2 = "0.10.9"
aes-gcm = { version = "0.10.3", features = ["std"] }

[dev-dependencies]
tokio = { version = "1.48.0", features = ["rt", "macros"] }
