[package]
name = "appletheia-infrastructure"
description = "The Infrastructure Layer for Event-Sourcing Architecture"
version = "0.7.4"
edition = "2024"
license = "MIT"
include = ["src/**", "migrations/**", "Cargo.toml", "README.md", "LICENSE"]
authors = ["pbandj082 <pbandj082@gmail.com>"]
repository = "https://github.com/pbandj082/appletheia"
keywords = ["appletheia", "ddd", "event-sourcing", "cqrs"]

[dependencies]
appletheia-domain = { workspace = true }
appletheia-application = { workspace = true }
thiserror = { workspace = true }
sqlx = { version = "0.8.6", features = [
    "runtime-tokio",
    "postgres",
    "uuid",
    "chrono",
    "migrate",
] }
uuid = { workspace = true, features = ["serde", "v7"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
chrono = { workspace = true }
google-cloud-pubsub = "0.33.0"
google-cloud-gax = "1.8.0"
futures-util = "0.3.31"
jsonwebtoken = { version = "10.3.0", features = ["rust_crypto"] }
reqwest = { version = "0.13.2", default-features = false, features = ["rustls", "gzip"] }
httpdate = "1.0.3"
url = { workspace = true }
base64 = { workspace = true }
sha2 = { workspace = true }
aes-gcm = { version = "0.10.3", features = ["std"] }

[dev-dependencies]
tokio = { workspace = true, features = ["rt", "macros"] }
