[package]
name = "appletheia-macros"
description = "The Macros for Appletheia"
version = "0.1.0"
edition = "2024"
license = "MIT"
include = ["src/**", "Cargo.toml", "README.md", "LICENSE"]
authors = ["pbandj082 <pbandj082@gmail.com>"]
repository = "https://github.com/pbandj082/appletheia"
keywords = ["appletheia", "ddd", "event-sourcing", "cqrs"]

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1"
quote = "1"
syn = { version = "2", features = ["extra-traits", "full"] }
proc-macro-crate = "3"

[dev-dependencies]
appletheia-domain = { workspace = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
trybuild = "1"
uuid = { version = "1", features = ["serde", "v7"] }
