[package]
name = "appletheia-macros"
description = "The Macros for Appletheia"
version = "0.2.13"
edition = "2024"
license = "MIT"
include = ["src/**", "Cargo.toml", "README.md", "LICENSE"]
authors = ["pbandj082 <pbandj082@gmail.com>"]
repository = "https://github.com/Lethephobia/appletheia"
keywords = ["appletheia", "ddd", "event-sourcing", "cqrs"]

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1"
quote = "1"
syn = { version = "2", features = ["extra-traits", "full"] }
proc-macro-crate = "3"

[dev-dependencies]
appletheia-application = { workspace = true }
appletheia-domain = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
thiserror = { workspace = true }
trybuild = "1"
uuid = { workspace = true, features = ["serde", "v7"] }
