[package]
name = "appletheia"
description = "The Application Interfaces for Event-Sourcing Architecture"
version = "0.1.7"
edition = "2024"
license = "MIT"
include = ["src/**", "Cargo.toml", "README.md", "LICENSE"]
authors = ["pbandj082 <pbandj082@gmail.com>"]
repository = "https://github.com/pbandj082/appletheia"
keywords = ["appletheia", "ddd", "event-sourcing", "cqrs"]

[features]
default = []
domain = ["dep:appletheia-domain"]
application = ["dep:appletheia-application"]
infrastructure = ["dep:appletheia-infrastructure"]
full = ["domain", "application", "infrastructure"]

[dependencies]
appletheia-domain = { version = "0.1.7", optional = true }
appletheia-application = { version = "0.1.5", optional = true }
appletheia-infrastructure = { version = "0.1.6", optional = true }
