[package]
name = "appletheia"
description = "The Application Interfaces for Event-Sourcing Architecture"
version = "0.6.7"
edition = "2024"
license = "MIT"
include = ["src/**", "Cargo.toml", "README.md", "LICENSE"]
authors = ["pbandj082 <pbandj082@gmail.com>"]
repository = "https://github.com/pbandj082/appletheia"
keywords = ["appletheia", "ddd", "event-sourcing", "cqrs"]

[features]
default = []
domain = ["dep:appletheia-domain"]
macros = ["dep:appletheia-macros", "domain"]
application = ["dep:appletheia-application"]
infrastructure = ["dep:appletheia-infrastructure"]
full = ["domain", "macros", "application", "infrastructure"]

[dependencies]
appletheia-domain = { workspace = true, optional = true }
appletheia-application = { workspace = true, optional = true }
appletheia-infrastructure = { workspace = true, optional = true }
appletheia-macros = { workspace = true, optional = true }
