[package]
name = "appletheia"
description = "The Application Interfaces for Event-Sourcing Architecture"
version = "0.7.11"
edition = "2024"
license = "MIT"
include = ["src/**", "Cargo.toml", "README.md", "LICENSE"]
authors = ["pbandj082 <pbandj082@gmail.com>"]
repository = "https://github.com/Lethephobia/appletheia"
keywords = ["appletheia", "ddd", "event-sourcing", "cqrs"]

[features]
default = []
domain = ["dep:appletheia-domain"]
application = ["dep:appletheia-application"]
macros-domain = ["dep:appletheia-macros", "domain"]
macros-application = ["dep:appletheia-macros", "application"]
infrastructure = ["dep:appletheia-infrastructure"]
full = ["domain", "application", "infrastructure", "macros-domain", "macros-application"]

[dependencies]
appletheia-domain = { workspace = true, optional = true }
appletheia-application = { workspace = true, optional = true }
appletheia-infrastructure = { workspace = true, optional = true }
appletheia-macros = { workspace = true, optional = true }
