[workspace]
resolver = "3"

members = [
    "crates/*",
    "servers/*",
]

[workspace.dependencies]
appletheia = { path = "../../../crates/appletheia" }
banking-domain = { path = "crates/domain" }
banking-application = { path = "crates/application" }
banking-infrastructure = { path = "crates/infrastructure" }
