[package]
name = "aggregate_via_appletheia_alias"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
theia = { package = "appletheia", path = "../../../../appletheia", features = ["domain"] }
appletheia-macros = { path = "../../.." }

serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
uuid = { version = "1", features = ["serde", "v7"] }

[workspace]
