[package]
name = "aggregate_via_domain_alias"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
domain = { package = "appletheia-domain", path = "../../../../appletheia-domain" }
appletheia-macros = { path = "../../.." }

serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
uuid = { version = "1", features = ["serde", "v7"] }

[workspace]
