[package]
name = "api"
version = "0.1.0"
edition = "2024"

[dependencies]
appletheia = { workspace = true, features = ["domain", "application", "infrastructure"] }
banking-domain = { workspace = true }
banking-application = { workspace = true }
banking-infrastructure = { workspace = true }
axum = "0.8"
tokio = { workspace = true, features = ["macros", "net", "rt-multi-thread", "signal"] }
