[package]
name = "worker"
version = "0.1.0"
edition = "2024"

[dependencies]
appletheia = { workspace = true, features = ["domain", "application", "infrastructure"] }
banking-iam-domain = { workspace = true }
banking-iam-application = { workspace = true }
banking-iam-infrastructure = { workspace = true }
banking-ledger-domain = { workspace = true }
banking-ledger-application = { workspace = true }
banking-ledger-infrastructure = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "signal", "time"] }
