[package]
name = "banking-iam-application"
version = "0.1.0"
edition = "2024"

[dependencies]
appletheia = { workspace = true, features = ["application", "domain"] }
banking-iam-domain = { workspace = true }
serde = { version = "1.0.228", features = ["derive"] }
thiserror = "2.0.17"
url = { version = "2.5.7", features = ["serde"] }
