[package]
name = "banking-iam-domain"
version = "0.1.0"
edition = "2024"

[dependencies]
appletheia = { workspace = true, features = ["macros-domain"] }
chrono = { workspace = true, features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
url = { version = "2", features = ["serde"] }
uuid = { version = "1", features = ["serde", "v5", "v7"] }
