[package]
name = "banking-ledger-application"
version = "0.1.0"
edition = "2024"

[dependencies]
appletheia = { workspace = true, features = ["application", "macros-application"] }
banking-iam-application = { workspace = true }
banking-iam-domain = { workspace = true }
banking-ledger-domain = { workspace = true }
serde = { version = "1.0.228", features = ["derive"] }
thiserror = "2.0.17"

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt"] }
uuid = { version = "1", features = ["v7"] }
